Blind fix for height issue on mobile

--- a/app/mobile.css
+++ b/app/mobile.css
@@ -44,6 +44,7 @@
 
     .webcam {
         width: 100%;
+        max-height: 50vh;
         object-fit: fill;
     }
 }
